Fix for images being stretched on iPhones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,6 +497,7 @@ input {
 
     #mindfulness-content section img {
         height: auto;
+        width: 90%;
         position: relative;
         padding: 20px;
     }
